# payment-service-test

./: .env.dev  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 3899df77d9d0_init.py  41d21f4af750_init.py  ffcd6b6bfa37_init.py
app/src/: consumer_app.py  main.py  producer_app.py  tasks.py
app/src/broker/: __init__.py  producers.py  rabbit_broker.py
app/src/broker/contracts/: __init__.py  payment_event.py
app/src/brokers/: __init__.py  faststream_broker.py  payment_producer.py
app/src/clients/: webhook_client.py
app/src/core/: async_runner.py  config.py  db.py  error.py  exceptions.py  logger.py  types.py
app/src/models/: __init__.py  outbox.py  payment.py
app/src/repositories/: outbox_repository.py  payment_repository.py
app/src/runners/: __init__.py  base_broker_runner.py  outbox_publisher_runner.py  payment_consumer_runner.py
app/src/runnsers/: outbox_publisher_runner.py
app/src/services/: outbox_publisher_service.py  payment_consumer_service.py  payment_service.py  payment_status_service.py  payment_webhook_notifier.py
app/src/services/commands/: __init__.py  payment_create_command.py
app/src/web/: __init__.py  deps.py  payment_router.py
app/src/web/schemas/: payment.py
docs/: Тестовое.txt
